--- a/calc.css
+++ b/calc.css
@@ -19,9 +19,10 @@ body{
 #display{
     width: 100%;
     padding: 20px;
-    font: 5rem;
+    font-size: 5rem;
     border:none;
     background-color: hsl(0, 0%, 20%);
+    text-align: left;
 }
 
 #keys{
@@ -46,4 +47,15 @@ button:hover{
 }
 button:active{
     background-color: hsl(0, 0%, 50%);
+}
+
+.operator-btn{
+    background-color: hsl(35, 100%, 55%);
+}
+
+.operator-btn:hover{
+    background-color: hsl(35, 100%, 65%);
+}
+.operator-btn:active{
+    background-color: hsl(35, 100%, 75%);
 }
